--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
 
 
   <!-- Youtube video -->
-  <section class="hero is-small is-light">
+  <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <!-- Paper video. -->
         <div class="columns is-centered has-text-centered">
         <h2 class="title is-3">Video Presentation</h2>
-        <span>coming soon</span>
+        <p>coming soon</p>
         </div>
       </div>
     </div>
@@ -218,7 +218,7 @@ End video carousel -->
       <div class="container">
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Poster</h2>
-          <span>coming soon</span>
+          <p>coming soon</p>
         </div>
         <!--<iframe src="static/pdfs/poster.pdf#toolbar=0&navpanes=0" width="100%" height="674" frameborder="0">
         </iframe> -->
