--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="hhttps://ivrl.github.io/vetim/" target="_blank"
+                  <a href="https://ivrl.github.io/vetim/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
