--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="https://ivrl.github.io/vetim/" target="_blank"
+                  <a href="static/paper.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper (coming soon)</span>
+                    <span>Paper</span>
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://ivrl.github.io/vetim/" target="_blank"
+                  <a href="static/supplementary.zip" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa-file-archive"></i>
                     </span>
-                    <span>Supplementary document (coming soon)</span>
+                    <span>Supplementary material</span>
                   </a>
                 </span>
               </div>
@@ -172,7 +172,12 @@
         <!-- Paper video. -->
         <div class="columns is-centered has-text-centered">
         <h2 class="title is-3">Video Presentation</h2>
-        <p>coming soon</p>
+        </div>
+        <div class="columns is-centered has-text-centered">
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
+            <source src="static/videos/bmvc_video.mp4"
+            type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
@@ -218,10 +223,9 @@ End video carousel -->
       <div class="container">
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Poster</h2>
-          <p>coming soon</p>
         </div>
-        <!--<iframe src="static/pdfs/poster.pdf#toolbar=0&navpanes=0" width="100%" height="674" frameborder="0">
-        </iframe> -->
+        <iframe src="static/BMVC poster.pdf#toolbar=0&navpanes=0" frameborder="0">
+        </iframe>
       </div>
     </div>
   </section>
