--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <div class="columns is-centered has-text-centered">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <source src="static/videos/bmvc_video.mp4"
+            <source src="static/bmvc_video.mp4"
             type="video/mp4">
           </video>
         </div>
@@ -224,7 +224,7 @@ End video carousel -->
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Poster</h2>
         </div>
-        <iframe src="static/BMVC poster.pdf#toolbar=0&navpanes=0" frameborder="0">
+        <iframe src="static/BMVC poster.pdf#toolbar=0&navpanes=0" width="100%" height="600" frameborder="0">
         </iframe>
       </div>
     </div>
