--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </span>
             </div>
             <div class="is-size-5 publication-authors">
-              <span class="author-block">To appear in BMVC 2023</span>
+              <span class="author-block">BMVC 2023</span>
             </div>
 
             <div class="column has-text-centered">
