--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               Text</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=1TDqUuwAAAAJ" target="_blank">Martin Nicolas
+                <a href="https://martin-ev.github.io" target="_blank">Martin Nicolas
                   Everaert</a> <sup>1</sup>,
               </span>
               <span class="author-block">
