--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@ End video carousel -->
     author    = {Everaert, Martin Nicolas and Bocchio, Marco and Arpa, Sami and S\"usstrunk, Sabine and Achanta, Radhakrishna},
     title     = {{VETIM}: {E}xpanding the {V}ocabulary of {T}ext-to-{I}mage {M}odels only with {T}ext},
     booktitle = {34th British Machine Vision Conference 2023, {BMVC} 2023, Aberdeen, UK, November 20-24, 2023},
-    publisher = {{BMVA} Press},
+    publisher = {{BMVA}},
     month     = {November},
     year      = {2023},
+    url       = {https://papers.bmvc2023.org/0016.pdf}
 }
       </code></pre>
       </div>
