--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="static/paper.pdf" target="_blank"
+                  <a href="https://papers.bmvc2023.org/0016.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -101,12 +101,21 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="static/supplementary.zip" target="_blank"
+                  <a href="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0016_supp.zip" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-archive"></i>
                     </span>
                     <span>Supplementary material</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://proceedings.bmvc2023.org/16/" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-external-link-alt"></i>
+                    </span>
+                    <span>BMVC proceedings</span>
                   </a>
                 </span>
               </div>
