--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="columns is-centered has-text-centered">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <source src="static/bmvc_video.mp4"
+            <source src="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0016_video.mp4"
             type="video/mp4">
           </video>
         </div>
