--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
               Text</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://martin-ev.github.io" target="_blank">Martin Nicolas
+                <a href="https://scholar.google.com/citations?user=1TDqUuwAAAAJ" target="_blank">Martin Nicolas
                   Everaert</a> <sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://www.researchgate.net/profile/Marco-Bocchio-3/publications" target="_blank">Marco
+                <a href="https://scholar.google.com/citations?user=KDiTxBQAAAAJ" target="_blank">Marco
                   Bocchio</a> <sup>2</sup>,
               </span>
               <span class="author-block">
@@ -87,6 +87,11 @@
             </div>
             <div class="is-size-5 publication-authors">
               <span class="author-block">BMVC 2023</span>
+            </div>
+            
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">Check out my other works at <a href="https://martin-ev.github.io/" target="_blank">https://martin-ev.github.io/
+                  </a>.</span>
             </div>
 
             <div class="column has-text-centered">
