--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
             </div>
             
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Check out my other works at <a href="https://martin-ev.github.io/" target="_blank">https://martin-ev.github.io/
-                  </a>.</span>
+              <span class="author-block">Check out my other works at <a href="https://martin-ev.github.io/" target="_blank">https://martin-ev.github.io</a>.</span>
             </div>
 
             <div class="column has-text-centered">
