--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ End video carousel -->
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Poster</h2>
         </div>
-        <iframe src="static/BMVC poster.pdf#toolbar=0&navpanes=0" width="100%" height="600" frameborder="0">
+        <iframe src="static/BMVC poster.pdf" width="100%" height="600" frameborder="0">
         </iframe>
       </div>
     </div>
